@@ -12,6 +12,8 @@
   OS X).
 * Fixed an error when trying to copy a file that is already at its
   destination.
+* When copying read-only files, the importer now tries to make the copy
+  writable. (Previously, this would just crash the import.)
 
 1.0b5
 -----
